<resources>
    <string name="app_name">Proderma</string>
    <string name="permission_deny">Proderma needs to access to your position as well as your phone to make calls when you ask it to. Allow Phone and Location permissions in your phone settings in order to use Proderma</string>

    <string name="menu_clinic">Clinic</string>
    <string name="menu_event">Event</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_history">History</string>
    <string name="menu_result">Result</string>
    <string name="menu_setting">Setting</string>

    <string name="home_lastnews">Lastest News</string>
    <string name="home_seeall">See All</string>
    <string name="home_product">Products</string>
    <string name="home_clinics">Clinics</string>
    <string name="home_notification">Notification</string>
    <string name="home_clinicsimage">Clinics Images</string>
    <string name="home_events">Events and Traininig</string>
    <string name="home_history">Order History</string>
    <string name="home_setting">Setting</string>
    <string name="home_training">training</string>
    <string name="product_price">Price($):</string>
    <string name="search_product">Search by name</string>
    <string name="product_quality">Quality:</string>
    <string name="product_more_info">More details</string>
    <string name="product_extra">FOC:</string>
    <string name="product_information">Informations:</string>
    <string name="product_have">Clinics have product</string>
    <string name="product_request">Request Product</string>

    <string name="event_interest">Interest</string>

    <string name="train_video">Video</string>
    <string name="train_pdf">P D F</string>
    <string name="lang_english">English</string>
    <string name="lang_arabic">عربى</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_signin">Log In</string>
    <string name="login_firstname">First name</string>
    <string name="login_secondname">Last name</string>
    <string name="login_clinicname">Clinic name</string>
    <string name="login_email">Email</string>
    <string name="login_phone">Phonenumber</string>
    <string name="login_info">Information</string>
    <string name="login_password">Password</string>
    <string name="signup_enter">Next</string>
    <string name="signup_already">Have already account? Signin</string>
    <string name="signup_sel_clinic">Are you Elite Clinic?</string>
    <string name="login_no_account">Have not account? Signup</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_clinic_info">Clinic Info</string>
    <string name="login_visa_password">Input Visa password</string>
    <string name="login_visa_code">Elite CardNumber(12345678901234)</string>
    <string name="login_clinic_register">Register</string>
    <string name="login_clinic_location">Clinic Location</string>
    <string name="clinic_update">Update</string>
    <string name="clinic_new_doctor">Add Doctor</string>
    <string name="clinic_new_offer">Add Offer</string>
    <string name="clinic_edit_offer">Edit Offer Info</string>
    <string name="clinic_edit_doctor">Edit Doctor Info</string>
    <string name="clinic_add_doctor_btn">Add</string>
    <string name="clinic_update_doctor_btn">Update</string>
    <string name="clinic_delete_doctor_btn">delete</string>
    <string name="clinic_doctor_name">Dr.</string>
    <string name="clinic_offer_title">Title</string>
    <string name="clinic_doctor_age">Age</string>
    <string name="clinic_doctor_info">Specialization</string>
    <string name="chat_message">Input message</string>
    <string name="chat_send">Send</string>
    <string name="setting_logout">Log out</string>
    <string name="setting_setpassword">Change Password</string>
    <string name="setting_originalpassword">Original Password</string>
    <string name="setting_newpassword">New Password</string>
    <string name="setting_confirmpassword">Confirm Password</string>

    <string name="clinic_location">Clinic Location</string>
    <string name="clinic_phone">Call us</string>
    <string name="clinic_whatsapp">Whatsapp us</string>

    <string name="item_moreinfo">More info</string>


</resources>