<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.AllProductActivity"
    android:orientation="vertical"
    tools:ignore="RtlCompat">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/major">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/home_setting"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:gravity="start|center"
                android:textStyle="bold"
                android:paddingStart="@dimen/_10sdp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sellang"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:background="@drawable/button_background_major"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/lang_english"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_setpass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:background="@drawable/button_background_major"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/setting_setpassword"/>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:background="@drawable/button_background_light_major"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/setting_logout"/>


</LinearLayout>