<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clinic.ClinicOfferEditActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/clinic_edit_offer"
                android:textAlignment="center"
                android:textSize="@dimen/_25sdp"
                android:textColor="@color/major"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <TextView
            android:id="@+id/txt_approveStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Waiting Approve"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:padding="@dimen/_3sdp"
            android:background="@drawable/button_background_light_major"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_weight="2"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/layout_background_major">

                <EditText
                    android:id="@+id/input_offertitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:background="#00ffffff"
                    android:text="Sofian Ajlikin"
                    android:hint="@string/clinic_offer_title"
                    android:textColor="#000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/layout_background_major"
                android:visibility="gone">

                <EditText
                    android:id="@+id/input_doctorage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:background="#00ffffff"
                    android:text="25"
                    android:inputType="number"
                    android:hint="@string/clinic_doctor_age"
                    android:textColor="#000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/layout_background_major">

                <EditText
                    android:id="@+id/input_offerinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:background="#00ffffff"
                    android:hint="@string/clinic_doctor_info"
                    android:text="DoctorInfomation"
                    android:maxLines="20"
                    android:textColor="#000" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_delete"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_background_light_major"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/clinic_delete_doctor_btn"
                android:textColor="@color/major" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>