<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.TrainingActivity"
    android:orientation="vertical"
    tools:ignore="RtlCompat">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/major">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/home_training"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:gravity="start|center"
                android:textStyle="bold"
                android:paddingStart="@dimen/_10sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end">
            <ImageView
                android:id="@+id/img_notiview"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_filter_list_24"
                android:layout_marginEnd="@dimen/_10sdp"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_video"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_background_major"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/train_video"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_pdf"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:background="@drawable/button_background_light_major"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/train_pdf"/>
            </LinearLayout>
        </LinearLayout>
        <GridView
            android:id="@+id/grid_alltrain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="1"/>
    </LinearLayout>
</LinearLayout>